# gpu-fleet-commander

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_AND_ROADMAP.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.flox/env/: manifest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
cmd/api/: main.py
cmd/worker/: main.py
docs/: DEVELOPMENT_AND_ARCHITECTURE.md  openapi.json
docs/adr/: 0001-record-architecture-decisions.md  0002-use-hexagonal-architecture.md  0003-use-asynchronous-io.md
public/: index.html
scripts/: generate_openapi.py
src/: __init__.py
src/adapters/: __init__.py
src/adapters/inbound/: __init__.py  api_schemas.py  metrics_exporter.py  routers.py  websocket_manager.py
src/adapters/outbound/: __init__.py  database.py  event_publisher.py  orm_models.py  sql_repositories.py
src/core/domain/: __init__.py  entities.py  exceptions.py
src/core/ports/: __init__.py  interfaces.py
src/core/use_cases/: node_provisioning.py  task_orchestrator.py  telemetry_ingestion.py
tests/integration/: test_sql_repositories.py
tests/unit/: fakes.py  test_metrics.py  test_node_provisioning.py  test_node_watchdog.py  test_task_orchestrator.py  test_telemetry_ingestion.py
