[tool.poetry]
name = "gpu-fleet-commander"
version = "1.0.0"
description = "Control Plane and Telemetry Ingestion Hub for distributed worker nodes."
authors = ["Casta2007-ccs"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
uvicorn = "^0.30.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
ruff = "^0.4.8"
mypy = "^1.10.0"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade (python upgrade syntax)
]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["src", "cmd"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
